--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,3 @@
-
-
 /*--------------------------------------------------*\
     Layout settings
 \*--------------------------------------------------*/
@@ -25,4 +23,11 @@
 
 .layout-items-floated-left {
   float: left;
+}
+
+
+.clearfix:after {
+  content:  "";
+  display:  table;
+  clear:    both;
 }
